# bpm21

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cross1  display_rule.sh  eq_classes_1.txt  ex_1.txt  ex_2.txt  ex_3.txt  fast_minimization.cpp  fast_minimization.h  for_semantisch_inconsistency.cpp  for_semantisch_inconsistency.h  graph.pdf.dot  install_deps.sh  log_1.txt  log_1_out.txt  log_2.txt  log_2_out.txt  log_test.txt  main.cpp  sigma.txt  sigma_1.txt  sigma_2.txt  sigma_3.txt  test_file.txt
antlr4/: DAD.g  FLLOATProp.g  Traces.g
include/alignment/: alignment_utils.h  result_semantisch_align.h
include/declare/: DataTraceParse.h  DeclareDataAware.h  DeclareModelParse.h
include/graphs/: FlexibleFA.h  FlexibleGraph.h  NodeLabelBijectionFA.h  NodeLabelBijectionGraph.h  adjacency_graph.h
include/graphs/algorithms/: minimizeDFA.h  nfa2dfa.h  shiftLabelsToNodes.h
include/graphs/third-party-wrappers/: FLLOATScriptRunner.h  FLLOATSimplePropParser.h  ParseFFLOATDot.h  lydia_entry_point.h
include/ltlf/: DataPredicate.h  PropositionalizedAtomsSet.h  ltlf.h
include/ltlf/westergraad_semantics/: FormulaToWestergaardFA.h  WestergaardNFALabel.h
include/pipeline/: DoublePrevNext.h  SimpleXESSerializer.h  double_interval_tree_t.h  foreign_data_loads.h  input_pipeline.h  pipeline_utils.h  string_interval_tree_t.h
include/structures/: query_interval_set.h
include/structures/query_interval_set/algorithms/: find_interval.h  insert_interval.h  minimize_tree.h
include/structures/query_interval_set/operators/: interval_comparator.h
include/structures/query_interval_set/structures/: forInsertion.h  node_recur.h  segment_partition_tree.h
include/utils/: stream_out.h  strings.h  xml_utils.h
include/utils/eq_class/: equivalence_class.h
include/utils/numeric/: hash_combine.h  pair_hash.h  uset_hash.h  vector_hash.h
include/utils/structures/: set_operations.h
include/wrappers/: aaltaf_wrapper.h
java_aligner/: README.md  download_planner.sh  pom.xml
java_aligner/src/main/java/control/: H_ConstraintsPerspective.java  H_MenuPerspective.java  H_PlannerPerspective.java  H_TracesPerspective.java
java_aligner/src/main/java/main/: CombinationOfRelevantTransitions.java  Constants.java  Main.java  RelevantTransition.java  Utilities.java
java_aligner/src/main/java/org/processmining/ltl2automaton/plugins/cup_parser/: ParserCup.java  Scanner.java
java_aligner/src/main/java/org/processmining/ltl2automaton/plugins/formula/conjunction/: GroupedTreeConjunction.java  SizeSortedTreeConjunction.java
java_aligner/src/main/java/uk/knobab/: ElaborateOnAlignment.java  Main.java
java_aligner/src/main/java/view/: AlphabetPerspective.java  MenuPerspective.java  PlannerOrchestrator.java  PlannerPerspective.java
python/: ltlf_to_graph_dot_files.py
src/alignment/: alignment_utils.cpp  result_semantisch_align.cpp
src/declare/: DataTraceParse.cpp  DeclareDataAware.cpp  DeclareModelParse.cpp
src/graphs/: adjacency_graph.cpp  minimizeDFA.cpp
src/graphs/third-party-wrappers/: FLLOATScriptRunner.cpp  FLLOATSimplePropParser.cpp  ParseFFLOATDot.cpp  lydia_entry_point.cpp
src/ltlf/: DataPredicate.cpp  PropositionalizedAtomsSet.cpp  ltlf.cpp
src/ltlf/westergraad_semantics/: FormulaToWestergaardFA.cpp
src/pipeline/: DoublePrevNext.cpp  SimpleXESSerializer.cpp  StringPrevNext.cpp  double_interval_tree_t.cpp  foreign_data_loads.cpp  input_pipeline.cpp  pipeline_utils.cpp  string_interval_tree_t.cpp
src/utils/: xml_utils.cpp
src/utils/numeric/: hash_combine.cpp
src/wrappers/: aaltaf_wrapper.cpp
